Criada estrutura e infraestrutura da aplicacao
